// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should show summary with Multiple expense 1`] = `
<div>
  <h1>
    Showing 
    3
     
    expenses
    , adding up 
    $1,807.90
  </h1>
</div>
`;

exports[`Should show summary with one expense 1`] = `
<div>
  <h1>
    Showing 
    1
     
    expense
    , adding up 
    $1.95
  </h1>
</div>
`;
